# formation

./: .gitignore  README.md  create_project_structure.ps1  pyproject.toml  requirements.txt
P10_Mettez_en_place_le_pipeline_d_orchestration_des_flux_aymeric_bailleul/: pyproject.toml
P10_Mettez_en_place_le_pipeline_d_orchestration_des_flux_aymeric_bailleul/P10_Mettez_en_place_le_pipeline_d_orchestration_des_flux_aymeric_bailleul/: ABAI_P10_00_presentation_20250116.pptx  ABAI_P10_01_tasks_list_logbook_20250116.md  ABAI_P10_03_bottleneck_pipeline_s3.yaml
P10_Mettez_en_place_le_pipeline_d_orchestration_des_flux_aymeric_bailleul/P10_Mettez_en_place_le_pipeline_d_orchestration_des_flux_aymeric_bailleul/_exports/: rapport_ca.xlsx
P10_Mettez_en_place_le_pipeline_d_orchestration_des_flux_aymeric_bailleul/_projet/: .gitignore  ABAI_P10_01_tasks_list_logbook_20250116.md  ABAI_P10_03_processus_metier.md  ABAI_P10_04_conception_data_lineage.md  ABAI_P10_XX_attendu_livrable_openclassroom.md  ABAI_P10_XX_contexte_openclassroom.md  README.md
P10_Mettez_en_place_le_pipeline_d_orchestration_des_flux_aymeric_bailleul/_projet/_analyses/: ABAI_P10_01_analyse_donnees_sources.md  ABAI_P10_X3_questions_reponses.md  QUESTIONS_REPONSES_SOUTENANCE_P10.md  VISION_SLIDES_P10_PRESENTATION.md  generate_zscore_graphs.py
P10_Mettez_en_place_le_pipeline_d_orchestration_des_flux_aymeric_bailleul/_projet/_exports/: 20260119_rapport_ca.xlsx  rapport_ca.xlsx
P10_Mettez_en_place_le_pipeline_d_orchestration_des_flux_aymeric_bailleul/_projet/_kestra/: bottleneck_pipeline.yaml  bottleneck_pipeline_s3.yaml  docker-compose.yml
P10_Mettez_en_place_le_pipeline_d_orchestration_des_flux_aymeric_bailleul/_projet/_livrables/: ABAI_P10_01_tasks_list_logbook_20250116.md  (+6 more)
P11_Categorisez_automatiquement_des_questions_aymeric_bailleul/: README.md  pyproject.toml
P11_Categorisez_automatiquement_des_questions_aymeric_bailleul/P11_Categorisez_automatiquement_des_questions_aymeric_bailleul/: ABAI_P11_02_presentation_20260216.pptx  ABAI_P11_0_README_20260216.md.md
P11_Categorisez_automatiquement_des_questions_aymeric_bailleul/_projet/: README.md  pyproject.toml  requirements.txt  setup_rag_from_scratch.bat  test_rag_system.bat
P11_Categorisez_automatiquement_des_questions_aymeric_bailleul/livrables/: ABAI_P11_02_presentation_20260216.pptx
P12_Gerez_un_projet_d_infrastructure_aymeric_bailleul/_projet/: .env.example  .gitignore  README.md  pyproject.toml
P2_Analysez_les_donnees_de_systemes_educatifs_bailleul_aymeric/: README.md  pyproject.toml
P2_Analysez_les_donnees_de_systemes_educatifs_bailleul_aymeric/_projet/: ABAI_P2_01_notebook.ipynb  ABAI_P2_02_presentation_analyse_exploratoire.pptx  exo_P2-01_analysez_les_donnees.ipynb
P5_Maintenez_et_documentez_un_systeme_de_stockage_des_donnees_securise_et_performant_bailleul_aymeric/: README.md  pyproject.toml
P5_Maintenez_et_documentez_un_systeme_de_stockage_des_donnees_securise_et_performant_bailleul_aymeric/_projet/: Dockerfile.create_users  Dockerfile.import_scripts  Dockerfile.tests  README.md  docker-compose.yml  docker_README.md  docker_script_bdd.py  docker_tests_bdd_pytest.py  local_README.md  local_script_bdd.py  local_tests_bdd.py  local_tests_bdd_pytest.py  requirements.txt  script_bdd.py  script_create_users.py  test_bdd.py  test_readonly_security.py  test_readwrite_security.py
P5_Maintenez_et_documentez_un_systeme_de_stockage_des_donnees_securise_et_performant_bailleul_aymeric/old/: docker_README.md
P6_Anticipez_les_besoins_en_consommation_de_batiments_bailleul_aymeric/: README.md  pyproject.toml
P6_Anticipez_les_besoins_en_consommation_de_batiments_bailleul_aymeric/_cours/: P6_exo1_Evaluez_la_performance_d_un_modele_predictif.ipynb
P6_Anticipez_les_besoins_en_consommation_de_batiments_bailleul_aymeric/_projet/: ABAI_P6_00_presentation.pptx  ABAI_P6_01_analyse_exploratoire.ipynb  ABAI_P6_01_modelistation_supervisee.ipynb  ABAI_P6_02_featuring.ipynb  ABAI_P6_02_modelistation_supervisee_featuring.ipynb  ABAI_P6_03_modeling_preparation.ipynb  ABAI_P6_03_modelistation_supervisee_preparation_modeling.ipynb  ABAI_P6_04_models_comparison.ipynb  ABAI_P6_05_interpretation_optimization.ipynb  ABAI_P6_code01_analyse_exploratoire.ipynb  ABAI_P6_code02_featuring.ipynb  ABAI_P6_code03_modeling_preparation.ipynb  ABAI_P6_presentation_20251013.pptx
P7_Concevez_et_analysez_une_base_de_donnees_nosql_aymeric_bailleul/: README.md  pyproject.toml
P7_Concevez_et_analysez_une_base_de_donnees_nosql_aymeric_bailleul/_cours/: 02_administrez_vos_donnees_avec_MongoDB.md  cours_credit_breton.pbix  exo_mongodb.md
P7_Concevez_et_analysez_une_base_de_donnees_nosql_aymeric_bailleul/_projets/: ABAI_P7_01_presentation_20251104.pptx  ABAI_P7_03_archi_schema_20251104.drawio  ABAI_P7_logbook_sharding.md  ABAI_P7_presentation_20251104.pptx  ABAI_P7_script_01_polars_requests.py  ABAI_P7_script_02_integration_data.py  ABAI_P7_script_03_test_replication.py  ABAI_P7_script_04_test_sharding.py  conf_01_add_shards.js  conf_02_setup_sharding_collection.js  zz_tool_clean_sharded_data.cmd
P8_Construisez_et_testez_une_infrastructure_de_donnees_aymeric_bailleul/: .gitignore  README.md  pyproject.toml
P8_Construisez_et_testez_une_infrastructure_de_donnees_aymeric_bailleul/_cours/: tuto_airbyte_main.py
P8_Construisez_et_testez_une_infrastructure_de_donnees_aymeric_bailleul/_projet/: .env.example  .gitignore  ABAI_P8_00_presentation_20251127.pptx  ABAI_P8_script_01_clean_data.py  ABAI_P8_script_02_import_to_mongodb.py  ABAI_P8_script_03_test_mongodb.py  ABAI_P8_script_04_cleanup_s3.py  ABAI_P8_script_05_benchmark_mongodb.py  Dockerfile  README.md  README_LOCAL.md  bailleul_aymeric_link_git_google_122025.md  docker-compose.yml  init-mongo.js  pyproject.toml
P8_Construisez_et_testez_une_infrastructure_de_donnees_aymeric_bailleul/src/: __init__.py
P9_Modelisez_une_infrastructure_dans_le_cloud_aymeric_bailleul/: .gitignore  README.md  pyproject.toml  requirements.txt  wsl_activate.sh
P9_Modelisez_une_infrastructure_dans_le_cloud_aymeric_bailleul/_projet/: test_spark.py  test_wsl.py
(+342 files in other folders)
