[project]
name = "formation-over-git-bailleul-aymeric"
version = "1.0.0"
description = "Environnement de formation de data engineer d'Openclassroom"
authors = [
    {name = "Aymeric Bailleul"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.6.0,<2.0.0)",
    "ipython (>=9.5.0,<10.0.0)",
    "ipykernel (>=6.30.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
