[tool.poetry]
name = "p10-orchestration-flux"
version = "0.1.0"
description = "P10 - Mettez en place le pipeline d'orchestration des flux"
authors = ["Aymeric Bailleul"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
pandas = "^2.3.3"
openpyxl = "^3.1.5"
duckdb = "^1.1.0"
boto3 = "^1.35.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
