[tool.poetry]
name = "p11-categorisez-questions"
version = "0.1.0"
description = "P11 - Catégorisez automatiquement des questions"
authors = ["Aymeric Bailleul"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
