[project]
name = "p2-analyse-donnees-educatives"
version = "0.1.0"
description = "Projet d'analyse des données de systèmes éducatifs"
authors = [
    {name = "Aymeric Bailleul"}
]
readme = "README.md"
requires-python = "^3.14"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "ipython (>=9.7.0,<10.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
