[tool.poetry]
name = "p5-stockage-donnees-mongodb"
version = "0.1.0"
description = "Projet de maintenance et documentation d'un système de stockage MongoDB sécurisé"
authors = ["Aymeric Bailleul"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
pandas = "^2.3.3"
pymongo = "^4.15.4"
pytest = "^8.3.5"
python-dotenv = "^1.2.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
