[tool.poetry]
name = "p7-nosql"
version = "0.1.0"
description = "Projet P7 - Conception et analyse base de données NoSQL MongoDB"
authors = ["merais <aymericbailleul@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
pymongo = "^4.15.4"
polars = "^1.35.2"
python-dotenv = "^1.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
