[tool.poetry]
name = "p8-infrastructure-donnees-airbyte"
version = "0.1.0"
description = "Projet de construction et test d'infrastructure de données avec Airbyte"
authors = ["Aymeric Bailleul"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
airbyte = "^0.33.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
